// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordTextClassification renders properly 1`] = `
<div class="record">
  <div class="record--left">
    <record-inputs record="[object Object]"></record-inputs>
    <classifier-exploration-area dataset="[object Object]" record="[object Object]"></classifier-exploration-area>
    <!---->
  </div>
  <div class="record__labels">
    <base-tag name="Test"></base-tag>
  </div>
</div>
`;

exports[`RecordTextClassification renders with empty prediction correctly 1`] = `
<div class="record">
  <div class="record--left">
    <record-inputs record="[object Object]"></record-inputs>
    <classifier-exploration-area dataset="[object Object]" record="[object Object]"></classifier-exploration-area>
    <!---->
  </div>
  <div class="record__labels">
    <!---->
  </div>
</div>
`;
